[tool.black]
line-length = 150

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podonos"
version = "0.2.1"
description = "Managed evaluation for audio & speech"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "David Anderson", email = "david@podonos.com"}
]
requires-python = ">=3.8"
dependencies = [
    "glog",
    "packaging",
    "requests",
    "soundfile==0.12.1",
    "tqdm"
]
keywords = ["ai", "speech", "synthesis"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage="https://www.podonos.com"
Repository="https://github.com/podonos/podonos-pysdk"
